Fix label text overflow #3878

--- a/src/main/resources/assets/admin/common/styles/api/ui/checkbox.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/checkbox.less
@@ -8,6 +8,10 @@
     cursor: pointer;
     align-items: center;
     justify-content: left;
+
+    .label-text {
+      .ellipsis();
+    }
   }
 
   input[disabled] + label {
@@ -51,6 +55,7 @@
     background: url("../../../images/box-unchecked.gif") -1px -2px no-repeat;
     width: 14px;
     height: 14px;
+    flex-shrink: 0;
   }
 
   &:hover {
